--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "connect": "^3.7.0",
     "express": "^4.17.1",
     "serve-static": "^1.14.1"
+  },
+  "devDependencies": {
+    "jest": "^27.0.4"
   }
 }
